...
          <View style={styles.searchContainer}>
            <StandardInput
              onChangeText={this.props.searchForAddress}
              onFocus={this.props.onFocusFromAddressField}
              placeholder="Pick-up from"
              value={this.props.fromAddress.value}
              testID="pickUpFromInput"
            />
            <StandardInput
              onChangeText={this.props.searchForAddress}
              onFocus={this.props.onFocusToAddressField}
              placeholder="Deliver to"
              value={this.props.toAddress.value}
              testID="deliverToInput"
              createInputRef={this.props.createToAddressRef}
            />
          </View>
        </View>
        {this.props.addressListIsOpen && (
          <Animated.View style={styles.addressContainer}>
...
