...
      );
    }
  }

  render() {
    return (
      <SafeAreaView style={styles.container} testID="directionsContainer">
        <TouchableWithoutFeedback onPress={Keyboard.dismiss}>
          <View>
            <StandardNavBar
              componentId={this.props.componentId}
              rightButtonOnPress={this.props.navRightButtonOnPress}
              rightImage={Images.historyIcon}
...
        </View>
        {this.props.isDirectionsDrawn && (
          <View style={styles.nextButtonContainer}>
            <MaterialButton
              onPress={this.props.nextButtonOnPress}
              text="Next"
              testID="navigationToQuoteButton"
            />
          </View>
        )}
      </SafeAreaView>
    );
  }
...
